--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
               }
             ],
             "styles": [
+              "src/theme.less",
               "src/styles.scss"
             ],
             "scripts": []
