--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,8 +1,9 @@
 {
   "/api/*": {
     "target": "http://47.103.210.109:8080",
-    "secure": false,
+    "secure": true,
     "changeOrigin": true,
+    "ws": true,
     "pathRewrite": {
       "^/": ""
     }
